--- a/lza_pad/src/main/res/values/strings.xml
+++ b/lza_pad/src/main/res/values/strings.xml
@@ -59,14 +59,19 @@
     <string name="pref_mod_cache_btn_start">缓存缓存</string>
     <string name="pref_mod_more_row_title">行设置：共%d行</string>
     <string name="pref_mod_more_col_title">列设置：共%d列</string>
+    <string name="pref_mod_more_img_scaling_title">封面图片显示比例：%d%%</string>
     <string name="pref_mod_more_row_summary">设置书架共几行</string>
     <string name="pref_mod_more_col_summary">设置书架每行摆放多少本电子书</string>
+    <string name="pref_mod_more_img_scaling">设置电子书封面图片的显示比例</string>
+    <string name="pref_mod_more_img_scaling_indicate">结果：</string>
     <string name="pref_glb_api_update_title">请确认</string>
     <string name="pref_glb_api_message">本操作会修改所有模块的数据，是否确认？</string>
     <string name="pref_glb_api_city_code_summary">城市编号：%s</string>
     <string name="pref_glb_api_device_code_summary">设备编号：%s</string>
     <string name="pref_glb_api_university_code_summary">学校编号：%s</string>
     <string name="pref_glb_api_update_success">修改成功！更新了%d条数据</string>
+    <string name="pref_glb_api_edit_title">请修改</string>
+
 
     <!-- ebook_content.xml -->
     <string name="ebook_content_take_photo">用“移动图书馆” \n拍我，下载电子图书</string>
