--- a/lza_pad/src/main/res/values/strings.xml
+++ b/lza_pad/src/main/res/values/strings.xml
@@ -71,7 +71,17 @@
     <string name="pref_glb_api_university_code_summary">学校编号：%s</string>
     <string name="pref_glb_api_update_success">修改成功！更新了%d条数据</string>
     <string name="pref_glb_api_edit_title">请修改</string>
-
+    <string name="pref_mod_more_running_mode">设置运行模式</string>
+    <string name="pref_mod_more_running_mode_title">当前运行模式：%s</string>
+    <string-array name="pref_mod_more_running_mode_key">
+        <item>数据库模式</item>
+        <item>网络模式</item>
+    </string-array>
+    <string-array name="pref_mod_more_running_mode_value">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    <string name="pref_mod_more_running_mode_dialog_title">请选择</string>
 
     <!-- ebook_content.xml -->
     <string name="ebook_content_take_photo">用“移动图书馆” \n拍我，下载电子图书</string>
